Add jvm args to jdk16+ to support safepoint metrics
They're some of our most actionable metrics which would be painful
to lose.